update oerms